unpackaged/main/default/objects/Visita_Fraccionamiento__c/Visita_Fraccionamiento__c.object-meta.xml
<CustomObject>
    <label>Visita</label>
    <nameField>
        <displayFormat>V-{0000000000}</displayFormat>
        <label>Visita</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visitas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>