unpackaged/main/default/objects/Visita_Fraccionamiento__c/fields/Automatica__c.field-meta.xml
<CustomField>
    <fullName>Automatica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automática</label>
    <type>Checkbox</type>
</CustomField>