unpackaged/main/default/objects/Visita_Fraccionamiento__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visitas</relationshipLabel>
    <relationshipName>Visitas1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>