unpackaged/main/default/objects/Visita_Fraccionamiento__c/fields/Fecha_Ultima_Visita__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ultima_Visita__c</fullName>
    <label>Fecha Ultima Visita</label>
    <type>Date</type>
</CustomField>