unpackaged/main/default/objects/Visita_Fraccionamiento__c/fields/Fecha_Visita__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Visita__c</fullName>
    <label>Fecha de Visita</label>
    <type>Date</type>
</CustomField>