unpackaged/main/default/objects/Visita_Fraccionamiento__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraccionamiento</label>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>Visitas</relationshipLabel>
    <relationshipName>Visitas_del</relationshipName>
    <type>Lookup</type>
</CustomField>