unpackaged/main/default/objects/Visita_Fraccionamiento__c/fields/Numero_Visita__c.field-meta.xml
<CustomField>
    <fullName>Numero_Visita__c</fullName>
    <label>No. Visita</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>