unpackaged/main/default/objects/Visita_Fraccionamiento__c/fields/Rol__c.field-meta.xml
<CustomField>
    <fullName>Rol__c</fullName>
    <label>Rol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>