unpackaged/main/default/objects/Visita_Fraccionamiento__c/fields/Tipo_F__c.field-meta.xml
<CustomField>
    <fullName>Tipo_F__c</fullName>
    <formula>IF(OR(Cuenta__r.RecordType.DeveloperName = &#39;Prospecto_Persona_Moral&#39;,Cuenta__r.RecordType.DeveloperName = &#39;Prospecto_Persona_Fisica&#39;),&#39;PROSPECTO&#39;,
 IF(OR(Cuenta__r.RecordType.DeveloperName = &#39;Afluente_Persona_Moral&#39;,Cuenta__r.RecordType.DeveloperName = &#39;Afluente_Persona_Fisica&#39;), &#39;AFLUENTE&#39;,
  IF(OR(Cuenta__r.RecordType.DeveloperName = &#39;Cliente_Persona_Moral&#39;,Cuenta__r.RecordType.DeveloperName = &#39;Cliente_Persona_Fisica&#39;), &#39;CLIENTE&#39;, &#39;&#39;)
 )
)</formula>
    <label>Tipo</label>
    <type>Text</type>
</CustomField>